--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ function generar() {
     const clave = document.getElementById("clave").value.trim().toUpperCase();
     const resultado = document.getElementById("resultado");
 
-    if (clave !== "Distinta") {
+    if (clave !== "DISTINTA") {
         resultado.style.display = "block";
         resultado.textContent = "❌ Clave incorrecta";
         return;
