--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </div>
 
 <script>
-const mensajeFijo = "Te amo tres millones";
+const mensajeFijo = "TE AMO TRES MILLONES";
 const morse = {
     "A": ".-", "B": "-...", "C": "-.-.", "D": "-..", "E": ".",
     "F": "..-.", "G": "--.", "H": "....", "I": "..", "J": ".---",
@@ -99,7 +99,8 @@ function generar() {
     const morseFinal = textoAMorse(mensajeFijo);
 
     resultado.style.display = "block";
-    resultado.textContent = `Codigo Morse:\n${morseFinal}`;
+    resultado.textContent = `Código Morse:
+${morseFinal}`;
 }
 </script>
 
